fix socicon align/justify

--- a/css/styles.css
+++ b/css/styles.css
@@ -329,7 +329,7 @@ margin: 0 auto;
 }
 
 .team-card {
-    padding: 32px 0 0 0;
+    padding: 32px 0 32px;
 }
 
 .team-list-item {
@@ -365,7 +365,7 @@ margin: 0 auto;
     align-items: center;
     justify-content: center;
     gap: 24px;
-    padding-bottom: 32px;
+    /* padding-bottom: 32px; */
         /* margin-top: 8px; */
         /* margin-bottom: 32px; */
 }
@@ -387,7 +387,10 @@ margin: 0 auto;
 }
 
 .social-icon {
+    display: flex;
     fill: #F4F4FD;
+    align-items: center;
+    justify-content: center;
 }
 
 
